[package]
name = "shield"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
array-init = "2.0.0"
bitflags = "1.3.2"
by_address = "1.0.4"
derive_more = {version = "0.99.16", default-features = false, features = ["add"]}
itertools = "0.10.1"
lru = "0.6.6"
num_enum = "0.5.4"
sdl2 = {version = "0.34", default-features = false, features = ["gfx", "static-link", "use-vcpkg"]}

[dev-dependencies]
claim = "0.5.0"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

# [profile.release]
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"
